--- a/.github/workflows/KingRan.yml
+++ b/.github/workflows/KingRan.yml
@@ -1,7 +1,7 @@
 name: KingRan-sync
 on:
   schedule:
-    - cron: '1 */3 * * *'
+    - cron: '1 8-23/7 * * *'
   workflow_dispatch:
   watch:
     types: started
